<resources>
    <string name="app_name">BLE</string>
    <string name="bl_adapter_not_found">The device does not have a bluetooth adapter</string>
    <string name="ble_not_supported">The device does not support BLE operations</string>
    <string name="blc_not_supported">The device does not support Bluetooth Classic operations</string>
    <string name="bt_disabled">Bluetooth is disabled</string>
    <string name="unknown_btdevice_detected">Unknown Bluetooth device type detected</string>
    <string name="scan_stopped">Stopped scanning for devices</string>
    <string name="scan_start">Scanning for devices</string>
    <string name="ble_list">Ble detected devices</string>
    <string name="classic_list">Classic devices connected</string>
    <string name="scan_for_devices">SCAN</string>
    <string name="device_connection">CONNECT</string>
    <string name="stop_bridge">STOP OPERATION</string>
    <string name="sniffer_screen_title">Transfer communication screen</string>
    <string name="send_to_ble">SEND BLE</string>
    <string name="send_to_classic">SEND CLASSIC</string>
    <string name="start_bridge">START BRIDGE</string>
    <string name="act_as_bclasic">CLASSIC MODE</string>
    <string name="act_as_ble">BLE MODE</string>
    <string name="server">SERVER</string>
    <string name="out_put_message">Output message</string>
    <string name="incorret_hanlder_passed">ERROR: Incorrect Bluetooth communication handler passed</string>
    <string name="ble_server">BLE Server</string>
    <string name="classic_selected">Classic device selected:</string>
    <string name="ble_selected">BLE device selected:</string>
    <string name="unable_to_start_bridge">ERROR: Could not initialize bridge component</string>
    <string name="start_advertising">Started advertising BLE server</string>
    <string name="fail_advertising">Failed to advertise server</string>
    <string name="incorrect_ble_connected">The BLE chosen does not have the required service</string>
    <string name="ble_string">BLE</string>
    <string name="classic_string">classic</string>
    <string name="question_bt_device">What kind of device is this?</string>
</resources>
